fix: alter font sizing on mobile devices

--- a/src/components/molecules/Project/Project.module.scss
+++ b/src/components/molecules/Project/Project.module.scss
@@ -17,7 +17,7 @@
 
 .heading {
   display: block;
-  font-size: 24px;
+  font-size: 22px;
 
   @include mq() {
     display: inline-block;
@@ -38,7 +38,7 @@
 
 .description {
   padding-top: 15px;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1.3;
 
   @include mq() {
