--- a/src/styles/elements/paragraph.scss
+++ b/src/styles/elements/paragraph.scss
@@ -1,6 +1,6 @@
 p {
   margin: 0;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 1.3;
 
   @include mq() {
